# Graduation-Project

./: .gitignore  c_cpp_properties.example.json  readme.md
Components/Alert/: CMakeLists.txt  main.c
Components/Alert/Include/: alert.h
Components/Message_Passing/: CMakeLists.txt  msg.c
Components/Message_Passing/Include/: msg.h
Components/PM_sensor/: CMakeLists.txt  main.c
Components/PM_sensor/Include/: pm_sensor.h
Components/RS485/: CMakeLists.txt  air_rs485.c  compile_commands.json
Components/RS485/.cache/clangd/index/: air_rs485.c.560FE2FCBD4873A0.idx  air_rs485.h.8A10C758A8A33953.idx
Components/RS485/Include/: air_rs485.h
Components/data_correctness/: CMakeLists.txt  main.c
Components/data_correctness/Include/: data_correct.h
Components/data_handle/: CMakeLists.txt  main.c
Components/data_handle/Include/: data_handle.h
Example/Message_passing/: CMakeLists.txt  main.c  receive.c  send.c
Example/Read_sensor/: CMakeLists.txt  main.c
Python/: Rs485_process_manager.py
Python/Alert/: alert_manager.py
Python/CoreIoT/: core_IoT_process_manager.py  data_formatter.py  mqtt_client.py
Python/RS485/: Rs485_process_manager.py  rs485_main.py  rs485_sensor_manager.py  rs485_wrapper.py
Python/RS485/RS485_Alert/: alert_manager.py  alert_wrapper.py
Python/RS485/RS485_Data/: rs485_sensor_manager.py
rs485/: main.c
